# Cuties-Blocks

./: AUTHORS  CMakeLists.txt  CodingStyle.md  README.md  cxx11.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  kcpluginmanager.cpp  kcpluginmanager.h
src/sdk/: CMakeLists.txt  kcabstractplugin.cpp  kcabstractplugin.h
src/tweak/: CMakeLists.txt
